# wasm-coremark-rs

./: Cargo.toml  LICENSE  README.md  coremark-minimal.wat  main.rs
