[package]
name = "wasmi-coremark"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2021"

[[bin]]
name = "bm"
path = "main.rs"

[dependencies]
wasmtime = "1.0.0"
wasm3 = { version = "0.3.1", features = ["build-bindgen"] }
wasmi = "0.17.0"

[profile.release]
lto = "fat"
codegen-units = 1
