[package]
name = "wasmi-coremark"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2021"

[[bin]]
name = "bm"
path = "main.rs"

[dependencies]
wasmi = { version = "0.19.0", path = "../wasmi/crates/wasmi" }
wasmtime = "1.0.0"
wasm3 = { version = "0.3.1", features = ["build-bindgen"] }

[profile.release]
lto = "fat"
codegen-units = 1
